# codebuff-community

./: knowledge.md
showcase/fishies/: README.md  knowledge.md
starter-templates/chrome-extension/: README.md  knowledge.md
starter-templates/nextjs/: README.md  knowledge.md
starter-templates/node-cli/: README.md  knowledge.md  package-lock.json
starter-templates/python-cli/: .gitignore  README.md  knowledge.md  pyproject.toml
starter-templates/python-cli/.github/workflows/: test-version.yml
starter-templates/python-cli/cli/: __init__.py
starter-templates/vite/: README.md  knowledge.md
