[project]
name = "cli"
version = "0.1.0"
description = "A Python CLI application"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "toml>=0.10.2",  # In case someone forgets to run `pip install -e ".[dev]"`
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
